--- a/modulo4/projeto-labook/package.json
+++ b/modulo4/projeto-labook/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "projeto-labook",
+  "name": "projeto-cookenu-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node ./build/index.js",
-    "dev": "ts-node-dev ./src/index.ts"
+    "start": "node ./build/index.js",
+    "build": "tsc",
+    "dev": "ts-node-dev ./src/index.ts",
+    "migrations": "tsc && node ./build/database/migrations/Migrations.js"
   },
   "keywords": [],
   "author": "",
@@ -14,21 +15,22 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/knex": "^0.16.1",
+    "@types/node": "^18.0.6",
+    "@types/uuid": "^8.3.4",
+    "@types/bcryptjs": "^2.4.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/knex": "^0.16.1",
-    "@types/uuid": "^8.3.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^2.3.0",
+    "knex": "^2.2.0",
     "mysql": "^2.18.1",
-    "uuid": "^9.0.0"
+    "uuid": "^8.3.2"
   }
 }
