--- a/modulo4/projeto-amaro/package.json
+++ b/modulo4/projeto-amaro/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "criptografia-e-user-roles",
+  "name": "projeto-amaro",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node ./build/index.js",
+    "start": "node ./build/src/index.js",
+    "build": "tsc",
     "dev": "ts-node-dev ./src/index.ts",
-    "migrations": "tsc && node ./build/database/migrations/Migrations.js"
+    "migrations": "tsc && node ./build/src/database/migrations/Migrations.js",
+    "test": "jest"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.8",
+    "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/knex": "^0.16.1",
-    "@types/node": "^18.8.0",
+    "@types/node": "^18.11.2",
     "@types/uuid": "^8.3.4",
-    "jest": "^29.1.2",
+    "jest": "^29.2.1",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
@@ -29,10 +30,10 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
-    "uuid": "^8.3.2"
+    "uuid": "^9.0.0"
   }
 }
